--- a/_config.yml
+++ b/_config.yml
@@ -18,21 +18,17 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: twilit이 알고리즘 문제 풀이하는 블로그
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+알고리즘 문제를 풀고, ps 일지혹은 알고리즘 문제 풀이를 작성합니다 
+최대한 발상의 과정이 잘 되어있고, 자세하게 써서 이해가 쉽게 쓰고 싶어서 새로 만들었습니다다
+baseurl: "twilit11.github.io"
+in codeforces, boj, atcoder: eggx50000, twilit, eggment_tree
+github:  twilit11
 
 # Build settings
 theme: minima
 plugins:
-  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default.
